# cmux

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  pyproject.toml
.claude/: hooks.json  settings.json
.claude/hooks/: audit-log.sh  block-interactive.sh  block-supervisor-edits.sh  compact-recovery.sh  notify-complete.sh  notify-output.sh  pre-compact.sh  stop-gate.sh  stream-result.sh  stream-thought.sh
.cmux/: .compact-timestamps  .last_healthy_commit  .sup-hello-world-heartbeat  .sup-hero-heartbeat  .sup-heroweb-heartbeat  .sup-todo-backend-heartbeat  .sup-todo-frontend-heartbeat  .supervisor-heartbeat  AMBITION.md  agent_registry.json  backlog.json  conversations.db  mailbox  preferences.json  prefs.json  projects.json  schedule.json  tasks.db  teams.json
.cmux/.log_markers/: cmux-server.log.marker  router.log.cooldown  router.log.marker
.cmux/mailbox-archive/: mailbox-20260221-065807
.cmux/worker-contexts/: hero-backend-context.md  hero-backend-role.md  hero-frontend-role.md  (+99 more)
docs/: CONCEPTS.md  PERMANENT_WORKER_GUIDE.md  QUICKSTART.md  README.md  REVIEWER_ROLE.md  SELF_IMPROVEMENT_GUIDE.md  SUPERVISOR_ROLE.md  TEAM.md  USER_GUIDE.md  WORKER_ROLE.md
src/: __init__.py  index.ts
tests/: conftest.py  test_agents.py  test_budget.py  test_messages.py  test_orchestrator.sh  test_projects.py  test_telegram.py  test_webhooks.py  test_websocket.py
tools/: agents  alert  auto-maintenance  autonomy-check  backlog  journal  lock  mailbox  prefs  projects  schedule  system-verify  tasks  teams  watchdog  workers  workers-init-role
(+476 files in other folders)
